--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="name_player_one">Player One Name</string>
     <string name="name_player_two">Player Two Name</string>
     <string name="start_match">Start Match</string>
+    <string name="vs">vs</string>
 </resources>
