--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="name_player_two">Player Two Name</string>
     <string name="start_match">Start Match</string>
     <string name="vs">vs</string>
+    <string name="Undo">Undo</string>
 </resources>
