--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="vs">vs</string>
     <string name="Undo">Undo</string>
     <string name="TextView">TextView</string>
+    <string name="Settings">Settings</string>
 </resources>
